--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,8 +3,7 @@ body {
     text-align: center;
     margin: 0;
     padding: 0;
-    background: url("../IMG/night-sky.jpg") no-repeat center center fixed;
-    background-size: cover;
+    background-color: #99cd85;
 }
 
 
